--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,27 @@
 <html>
   <head>
     <title>Pdfgenerationdev</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "LSS PDF Report" %></title>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>    
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>    
     <%= csrf_meta_tags %>
   </head>
   <body>
     <%= render 'shared/navigation' %>
-  
     <div id="main-container" class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          <% flash.each do |name, msg| %>
+            <% if msg.is_a?(String) %>
+              <div class="alert alert-dismissible alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %>">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                <%= content_tag :div, msg, :id => "flash_#{name}" %>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
       <div class="row">
         <div class="col-xs-12">
           <%= yield %>
