--- a/app/views/pdfjobs/firestop_survey.html.erb
+++ b/app/views/pdfjobs/firestop_survey.html.erb
@@ -63,7 +63,9 @@
                 <td><%= fss.u_inspected_on %></td>
                 <td><%= fss.u_active %></td>
                 <td><%= fss.u_delete %></td>
-                <td><%= link_to 'Destroy', pdfjob_path(fss), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
+                <% if current_user.role == "Admin" %>
+                  <td><%= link_to 'Destroy', pdfjob_path(fss), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
+                <% end %>  
               </tr>
             <% end %>
           </tbody>
