--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -14,7 +14,7 @@
   </div>
 </div> -->
 
-<nav class="navbar navbar-default" role="navigation">
+<!-- <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
@@ -26,11 +26,36 @@
         <div class="col-md-6">
           <h2><%= $pdfjobs_count %></h2>
         </div>
-        <!-- <div class="col-md-4">
+        <div class="col-md-4">
           <a href="/pdfjobs/clear_index_list_view"><h2>Delete All Reports</h2></a>
-        </div> -->
+        </div>
       </div>
     </div>
+  </div>
+</nav> -->
+
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <% if user_signed_in? %>
+        <a href="/"><h2>LSS PDF Report(<%= $pdfjobs_count %>)</h2></a>
+      <% else %>
+        <h2>LSS PDF Report</h2>
+      <% end %>
+    </div>
+    <ul class="nav navbar-nav navbar-right">
+      <% if user_signed_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= user_name(current_user) %><span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li class="divider"></li>
+            <li><%= link_to 'Sign out', destroy_user_session_path, :method => 'delete' %></li>
+          </ul>
+        </li>
+      <% else %>
+        <!-- <li><%#= link_to 'Sign in', new_user_session_path %></li> -->
+      <% end %>
+    </ul>
   </div>
 </nav>
 
