Added the Failed and Rapaied Columns in list view

--- a/app/views/project_completions/index.html.erb
+++ b/app/views/project_completions/index.html.erb
@@ -38,6 +38,7 @@
               <th>Autocad(m_autocad)</th>
               <th>Total Dampers Inspected(m_total_no_of_dampers_inspected)</th>
               <th>Total Dampers Passed(m_total_no_of_dampers_passed)</th>
+              <th>Total Dampers Failed(m_total_no_of_dampers_failed)</th>
               <th>Total Dampers NA(m_total_no_of_dampers_na)</th>
               <th>Total Dampers Access Door Installed(m_total_no_of_damper_access_door_installed)</th>
               <th>Containment Tent Used(m_containment_tent_used)</th>
@@ -67,6 +68,7 @@
                 <td><%= di.m_autocad %></td>
                 <td><%= di.m_total_no_of_dampers_inspected %></td>
                 <td><%= di.m_total_no_of_dampers_passed %></td>
+                <td><%= di.m_total_no_of_dampers_failed %></td>
                 <td><%= di.m_total_no_of_dampers_na %></td>
                 <td><%= di.m_total_no_of_damper_access_door_installed %></td>
                 <td><%= di.m_containment_tent_used %></td>
