--- a/app/views/project_completions/mpc_damperrepair.html.erb
+++ b/app/views/project_completions/mpc_damperrepair.html.erb
@@ -37,6 +37,7 @@
               <th>Printed Report(m_printed_report)</th>
               <th>Autocad(m_autocad)</th>
               <th>Total Dampers Repair(m_total_no_of_dampers_repaired)</th>
+              <th>Total Dampers Repaired(m_total_no_of_dampersrepaired)</th>
               <th>Total DR Access Door Installed (m_total_no_of_dr_access_door_installed)</th>
               <th>Total DR Actuator Installed (m_total_no_of_dr_actuator_installed)</th>
               <th>Total DR Installed(m_total_no_of_dr_damper_installed)</th>
@@ -66,6 +67,7 @@
                 <td><%= dr.m_printed_report %></td>
                 <td><%= dr.m_autocad %></td>
                 <td><%= dr.m_total_no_of_dampers_repaired %></td>
+                <td><%= dr.m_total_no_of_dampersrepaired %></td>
                 <td><%= dr.m_total_no_of_dr_access_door_installed %></td>
                 <td><%= dr.m_total_no_of_dr_actuator_installed %></td>
                 <td><%= dr.m_total_no_of_dr_damper_installed %></td>
