--- a/app/views/project_completions/index.html.erb
+++ b/app/views/project_completions/index.html.erb
@@ -58,7 +58,9 @@
               <tr>
                 <td><%= di.m_job_id %></td>
                 <td><%= di.m_service_sysid %></td>
-                <td><%= di.m_date %> | <%= di.m_date.localtime.strftime("%m-%d-%Y %r") %></td>
+                <% unless di.m_date.blank? %>
+                  <td><%= di.m_date %> | <%= di.m_date.localtime.strftime("%m-%d-%Y %r") %></td>
+                <% end %>  
                 <td><%= di.m_facility %></td>
                 <td><%= di.m_building %></td>
                 <td><%= di.m_project_start_date.localtime.strftime(I18n.t('time.formats.mdY')) %></td>
