--- a/app/views/project_completions/index.html.erb
+++ b/app/views/project_completions/index.html.erb
@@ -63,7 +63,9 @@
                 <% end %>  
                 <td><%= di.m_facility %></td>
                 <td><%= di.m_building %></td>
-                <td><%= di.m_project_start_date.localtime.strftime(I18n.t('time.formats.mdY')) %></td>
+                <% unless di.m_project_start_date.blank? %>
+                  <td><%= di.m_project_start_date.localtime.strftime(I18n.t('time.formats.mdY')) %></td>
+                <% end %>  
                 <td><%= di.m_primary_contact_name %></td>
                 <td><%= di.m_phone %></td>
                 <td><%= di.m_printed_report %></td>
