Implemented and Completed the FireDoor Inspection Facility Building Calculation and Graph page and Fixed the LSP-1099

--- a/app/views/pdfjobs/damper_repair.html.erb
+++ b/app/views/pdfjobs/damper_repair.html.erb
@@ -61,7 +61,7 @@
               <tr>
                 <td><%= dr.u_job_id %></td>
                 <td><%= dr.u_service_id %></td>
-                <td><%= dr.u_floor %></td>
+                <td><%= dr.u_floor.to_i %></td>
                 <td><%= dr.u_type %></td>
                 <td><%= dr.u_damper_name %></td>
                 <td><%= dr.u_tag %></td>
