--- a/app/views/pdfjobs/firedoor_inspection.html.erb
+++ b/app/views/pdfjobs/firedoor_inspection.html.erb
@@ -54,7 +54,7 @@
               <tr>
                 <td><%= fdi.u_job_id %></td>
                 <td><%= fdi.u_service_id %></td>
-                <td><%= fdi.u_floor %></td>
+                <td><%= fdi.u_floor.to_i %></td>
                 <td><%= fdi.u_tag %></td>
                 <td><%= fdi.u_door_category %></td>
                 <td><%= fdi.u_fire_rating %></td>
