--- a/app/views/pdfjobs/firestop_installation.html.erb
+++ b/app/views/pdfjobs/firestop_installation.html.erb
@@ -54,7 +54,7 @@
               <tr>
                 <td><%= fsi.u_job_id %></td>
                 <td><%= fsi.u_service_id %></td>
-                <td><%= fsi.u_floor %></td>
+                <td><%= fsi.u_floor.to_i %></td>
                 <td><%= fsi.u_tag %></td>
                 <td><%= fsi.u_service_type %></td>
                 <td><%= fsi.u_penetration_type %></td>
