--- a/app/views/pdfjobs/firestop_survey.html.erb
+++ b/app/views/pdfjobs/firestop_survey.html.erb
@@ -54,7 +54,7 @@
               <tr>
                 <td><%= fss.u_job_id %></td>
                 <td><%= fss.u_service_id %></td>                
-                <td><%= fss.u_floor %></td>
+                <td><%= fss.u_floor.to_i %></td>
                 <td><%= fss.u_tag %></td>
                 <td><%= fss.u_service_type %></td>
                 <td><%= fss.u_penetration_type %></td>
