Changes made for the view of PDFJobs view

--- a/app/views/pdfjobs/firedoor_inspection.html.erb
+++ b/app/views/pdfjobs/firedoor_inspection.html.erb
@@ -30,8 +30,8 @@
               <!-- <th>Group Name(u_facility_name)</th>
               <th>Facility Name(u_group_name)</th> -->
               <th>Job ID(u_job_id)</th>
-              <th>Facility SysId(u_facility_sys_id)</th>
-              <!-- <th>Job Start Date(u_job_start_date)</th>
+              <!--<th>Facility SysId(u_facility_sys_id)</th>
+              <th>Job Start Date(u_job_start_date)</th>
               <th>Job End Date(u_job_end_date)</th> -->
               <th>Service ID(u_service_id)</th>
               <!-- <th>Asset ID(u_asset_id)</th>
@@ -53,8 +53,7 @@
           <tbody>
             <% @firedoor_inspection.each do |fdi| %>
               <tr>
-                <td><%= fdi.u_job_id %></td>
-                <td><%= fdi.u_facility_sys_id %></td>
+                <td><%= fdi.u_job_id %></td>                
                 <td><%= fdi.u_service_id %></td>
                 <td><%= fdi.u_floor.to_i %></td>
                 <td><%= fdi.u_tag %></td>
