--- a/app/views/pdfjobs/firestop_installation.html.erb
+++ b/app/views/pdfjobs/firestop_installation.html.erb
@@ -29,7 +29,7 @@
               <!-- <th>Group Name(u_facility_name)</th>
               <th>Facility Name(u_group_name)</th> -->
               <th>Job ID(u_job_id)</th>
-              <th>Facility SysId(u_facility_sys_id)</th>
+              <!-- <th>Facility SysId(u_facility_sys_id)</th>
               <!-- <th>Job Start Date(u_job_start_date)</th>
               <th>Job End Date(u_job_end_date)</th> -->
               <th>Service ID(u_service_id)</th>
@@ -53,8 +53,7 @@
           <tbody>
             <% @firestop_installation.each do |fsi| %>
               <tr>
-                <td><%= fsi.u_job_id %></td>
-                <td><%= fsi.u_facility_sys_id %></td>
+                <td><%= fsi.u_job_id %></td>                
                 <td><%= fsi.u_service_id %></td>
                 <td><%= fsi.u_floor.to_i %></td>
                 <td><%= fsi.u_tag %></td>
