--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -40,7 +40,7 @@
       <div class="row">
         <% if user_signed_in? %>
           <div class="col-md-4">
-            <a href="/"><h2>LSS PDF Report(<%= $pdfjobs_count %>)</h2></a>
+            <a href="/"><h2>LSS PDF Report</h2></a>
           </div>
           <div class="col-md-6">            
             <h2><%= link_to "Project Completion PDF", project_completions_path %></h2>
