Changed the floor integer to string in views

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -56,7 +56,7 @@
               <tr>
                 <td><%= di.u_job_id %></td>                
                 <td><%= di.u_service_id %></td>
-                <td><%= di.u_floor.to_i %></td>
+                <td><%= di.u_floor %></td>
                 <td><%= di.u_type %></td>
                 <td><%= di.u_damper_name %></td>
                 <td><%= di.u_tag %></td>
