--- a/app/views/pdfjobs/firestop_survey.html.erb
+++ b/app/views/pdfjobs/firestop_survey.html.erb
@@ -26,8 +26,8 @@
         <table class="table table-bordered border-striped" cellspacing="0" width="100%" id ="example">
           <thead>
             <tr>
-              <!-- <th>Group Name(u_facility_name)</th>
-              <th>Facility Name(u_group_name)</th> -->
+              <!-- <th>Group Name(u_group_name)</th> -->
+              <th>Facility Name(u_facility_name)</th>
               <th>Job ID(u_job_id)</th>
               <!-- <th>Facility SysId(u_facility_sys_id)</th>
               <th>Job Start Date(u_job_start_date)</th>
@@ -53,13 +53,14 @@
           <tbody>
             <% @firestop_survey.each do |fss| %>
               <tr>
-                <td><%= fss.u_job_id %></td>                
-                <td><%= fss.u_service_id %></td>                
+                <td><%= fss.u_facility_name %></td>
+                <td><%= fss.u_job_id %></td>
+                <td><%= fss.u_service_id %></td>
                 <td><%= fss.u_floor %></td>
                 <td><%= fss.u_tag %></td>
                 <td><%= fss.u_service_type %></td>
                 <td><%= fss.u_penetration_type %></td>
-                <td><%= fss.u_barrier_type %></td>                
+                <td><%= fss.u_barrier_type %></td>
                 <td><%= fss.u_issue_type %></td>
                 <td><%= fss.u_inspected_on %></td>
                 <td><%= fss.u_active %></td>
