--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -43,7 +43,7 @@
             <a href="/"><h2>LSS PDF Report</h2></a>
           </div>
           <div class="col-md-6">            
-            <h2><%= link_to "Project Completion PDF", project_completions_path %></h2>
+            <h2><%= link_to "Project Completion PDF Production", project_completions_path %></h2>
           </div>
         <% else %>
           <h2>LSS PDF Report</h2>
